# v2sim

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  build.py  cmd_advplot.py  cmd_convert.py  cmd_csquery.py  cmd_gen_cs.py  cmd_gen_trip.py  cmd_graph_tool.py  cmd_plot.py  convert_case.py  gen_cs.py  gen_trip.py  gui_cmp.py  gui_cmp_qt.py  gui_convert.py  gui_main.py  gui_osmWizard.py  gui_para.py  gui_viewer.py  gui_viewer_qt.py  install_deps.bat  pyproject.toml  readme.md  requirements.txt  setup.py  sim_core.py  sim_para.py  sim_single.py  test.py  version.txt  version_checker.py  version_checker_qt.py
.github/ISSUE_TEMPLATE/: bug_report.md
cases/pwe_37nodes/: 37nodes.grid.xml  37nodes.plg.xml  37nodes.sumocfg
cases/std_12nodes/: 12nodes.fcs.xml  12nodes.net.xml  12nodes.plg.xml  12nodes.scs.xml  12nodes.sumocfg  pdn.grid.xml
cases/std_37nodes/: 37nodes.fcs.xml  37nodes.grid.xml  37nodes.plg.xml  37nodes.scs.xml  37nodes.taz.xml  ext.py
cases/std_Nanjing/: cs.csv  osm.netccfg  osm.sumocfg  pdn.grid.xml  std_Nanjing.fcs.xml  std_Nanjing.plg.xml  std_Nanjing.scs.xml
cases/std_Yancheng/: cs.csv  osm.netccfg  osm.polycfg  osm.sumocfg  pdn.grid.xml  plugins.plg.xml  std_Yancheng.fcs.xml  std_Yancheng.scs.xml
cases/sumo_12nodes/: 12nodes.plg.xml  12nodes.taz.xml  pdn.grid.xml  preference.v2simcfg  sumo_12nodes.fcs.xml  sumo_12nodes.gs.xml  sumo_12nodes.scs.xml  taz_type.txt
cases/sumo_37nodes/: 37nodes.fcs.xml  37nodes.grid.xml  37nodes.gs.xml  37nodes.net.xml  37nodes.plg.xml  37nodes.scs.xml  preference.v2simcfg  taz_type.txt
cases/sumo_Nanjing/: osm.polycfg  pdn.grid.xml  preference.v2simcfg  std_Nanjing.plg.xml
cases/ux_12nodes/: 12nodes.fcs.xml  12nodes.net.xml  12nodes.net.xml.disabled  12nodes.plg.xml  12nodes.scs.xml  12nodes.sumocfg  node_type.txt  preference.v2simcfg  ux_12node.fcs.xml  ux_12nodes.fcs.xml  ux_12nodes.grid.xml  ux_12nodes.gs.xml  ux_12nodes.net.xml  ux_12nodes.plg.xml  ux_12nodes.scs.xml
cases/ux_37nodes/: 37nodes.fcs.xml  37nodes.grid.xml  37nodes.net.xml  37nodes.plg.xml  37nodes.scs.xml  ext.py  node_type.txt  preference.v2simcfg  ux_37nodes.fcs.xml  ux_37nodes.grid.xml  ux_37nodes.gs.xml  ux_37nodes.plg.xml  ux_37nodes.scs.xml
cases/ux_Nanjing/: Nanjing.grid.xml  Nanjing.net.xml  Nanjing.plg.xml  cs.csv  gs.csv  preference.v2simcfg  ux_Nanjing.fcs.xml  ux_Nanjing.gs.xml  ux_Nanjing.scs.xml
external_components/: demo.langs  demo.py
fgui/: __init__.py  controls.py  dirsel.py  evtq.py  langhelper.py  mainbox.py  network.py  trips.py  trips_qt.py  viewbox.py
fgui/view/: __init__.py
flocale/: zh_CN.py
fplotkit/: example.txt  reader.py
fplugins/: __init__.py  base.py  pdn.py  v2g.py
fstatistics/: base.py  logcs.py  logev.py  manager.py
ftraffic/: __init__.py  cproc.py  cs.py  cslist.py  ev.py  evdict.py  geo.py  inst.py  params.py  trip.py  utils.py
ftrafficgen/: __init__.py  csquery.py  graph.py  misc.py  poly.py  tripgen.py
osmhelper/webWizard/: index.html
probtable/: soc_dist.csv
probtable/duration_of_parking/: H.csv  H_spr.csv  H_spr_weekend.csv  W_spr_weekday.csv  W_spr_weekend.csv
probtable/space_transfer_probability/: H_spr_weekend.csv  O_spr_weekend.csv  R_spr_weekday.csv  R_spr_weekend.csv  W_spr_weekend.csv
resources/controls/: en.lang  zh_CN.lang
resources/gui_cmp/: en.lang  zh_CN.lang
resources/gui_convert/: en.lang  zh_CN.lang
resources/gui_main/: en.lang  zh_CN.lang
resources/gui_para/: en.lang  zh_CN.lang
resources/gui_viewer/: en.lang  zh_CN.lang
scripts/: bump_version.py
unit_test/: station.py  veh.py
v2sim/: __init__.py  core.py  net.py  seg.py  sim_core.py  utils.py  wrapper.py
v2sim/app/: cmd_advplot.py  cmd_convert.py  cmd_csquery.py  cmd_gen_cs.py  cmd_gen_trip.py  (+10 more)
v2simux/: __init__.py  sim_core.py
v2simux_gui/: com_no_vx.py  common.py  langhelper.py
(+270 files in other folders)
