[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "v2simux"
version = "1.4.0"
dependencies = [ "feasytools>=0.1.4", "fpowerkit>=0.3.6.post1", "networkx>=3.2.1", "numpy", "matplotlib", "pyproj", "requests", "cloudpickle", "sumolib", "dill",]
requires-python = ">= 3.9"
license = "BSD-3-Clause"
description = "V2Sim-UX: An Open-Source Mesoscopic V2G Simulation Platform in Urban Power and Transportation Network"

[project.optional-dependencies]
rl = ["gymnasium"]

[project.scripts]
v2simux-gui = "v2simux.tools.gui_main:main"
v2simux = "v2simux.tools.sim_single:work"
v2simux-para = "v2simux.tools.sim_para:main"
v2simux-advplot = "v2simux.tools.cmd_advplot:main"
v2simux-convert = "v2simux.tools.cmd_convert:main"
v2simux-csquery = "v2simux.tools.cmd_csquery:main"
v2simux-gen-cs = "v2simux.tools.cmd_gen_cs:main"
v2simux-gen-trip = "v2simux.tools.cmd_gen_trip:main"
v2simux-plot = "v2simux.tools.cmd_plot:main"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/hesl-seu/v2sim"
Documentation = "https://hesl-seu.github.io/v2sim-wiki/"
Repository = "https://github.com/hesl-seu/v2sim"
Issues = "https://github.com/hesl-seu/v2sim/issues"

[tool.hatch.build]
include = [ "v2simux/*",]
